--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
     "react-dom": "^16.6.1",
+    "react-highcharts": "^16.0.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0"
   },
